[package]
name = "tlshake"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
rustls = "0.23.8"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
stderrlog = "0.6.0"
webpki-roots = "0.26.1"
